/************************************************************************************
 * Copyright (C) 2018-2024 E.R.P. Consultores y Asociados, C.A.                     *
 * Contributor(s): Edwin Betancourt, EdwinBetanc0urt@outlook.com                    *
 * This program is free software: you can redistribute it and/or modify             *
 * it under the terms of the GNU General Public License as published by             *
 * the Free Software Foundation, either version 2 of the License, or                *
 * (at your option) any later version.                                              *
 * This program is distributed in the hope that it will be useful,                  *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of                   *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the                     *
 * GNU General Public License for more details.                                     *
 * You should have received a copy of the GNU General Public License                *
 * along with this program. If not, see <https://www.gnu.org/licenses/>.            *
 ************************************************************************************/
syntax = "proto3";

option java_package = "org.spin.proto.journal_import";
option java_multiple_files = true;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package journal_import;

// Journal
message CreateJournalRequest {
	string document_no = 1;
	string date_acct = 2;
	string description = 3;
	string amt_source_dr = 4;
	string amt_source_cr = 5;
	string account_value = 6;
	string user_element1_value = 7;
	string user_element2_value = 8;
	string bpartner_value = 9;
}
message ProcessJournalRequest {
	string document_no = 1;
}


// Journal Import
service JournalImportService {
	// Create Journal
	rpc CreateJournal(CreateJournalRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post: "/v1/journals",
			body: "*"
		};
	}
}
